--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_statistics
-	base = 755d13b
-	trimbase = 
+	base = 768cbc8
+	trimbase = 755d13b
 	parent = upstream
 	previous = 121e0ba
