--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_formatters
-	base = 2946598
-	trimbase = 
+	base = 907e39e
+	trimbase = 2946598
 	parent = upstream
 	previous = 121e0ba
