--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_filesystem
-	base = 9f053f0
-	trimbase = 
+	base = 3c11d35
+	trimbase = 9f053f0
 	parent = upstream
 	previous = 121e0ba
