--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_sigslots
-	base = c13d494
-	trimbase = 
+	base = 5b62d8f
+	trimbase = c13d494
 	parent = upstream
 	previous = 121e0ba
