--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_exceptions
-	base = 4567b2c
-	trimbase = 
+	base = eda33e2
+	trimbase = 4567b2c
 	parent = upstream
 	previous = 121e0ba
