--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_eigen
-	base = 9674a5d
-	trimbase = 
+	base = 7075d3a
+	trimbase = 9674a5d
 	parent = upstream
 	previous = 121e0ba
