--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_type_traits
-	base = a8cab30
-	trimbase = 
+	base = 36cb978
+	trimbase = a8cab30
 	parent = upstream
 	previous = 121e0ba
