--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_command_line
-	base = 1c966cb
-	trimbase = 
+	base = 7fa1cd1
+	trimbase = 1c966cb
 	parent = upstream
 	previous = 121e0ba
