--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_ipc
-	base = 350852c
-	trimbase = 
+	base = f31cbff
+	trimbase = 350852c
 	parent = upstream
 	previous = 121e0ba
