--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_devices
-	base = 32c7976
-	trimbase = 
+	base = 3483e44
+	trimbase = 32c7976
 	parent = upstream
 	previous = 121e0ba
