--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_time
-	base = 49e0868
-	trimbase = 
+	base = 7f023da
+	trimbase = 49e0868
 	parent = upstream
 	previous = 121e0ba
