--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_containers
-	base = 6df5e93
-	trimbase = 
+	base = 96348f4
+	trimbase = 6df5e93
 	parent = upstream
 	previous = 121e0ba
