--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_threads
-	base = e3d911d
-	trimbase = 
+	base = e0ac108
+	trimbase = e3d911d
 	parent = upstream
 	previous = 121e0ba
