--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_streams
-	base = 9c49684
-	trimbase = 
+	base = 9ce5036
+	trimbase = 9c49684
 	parent = upstream
 	previous = 121e0ba
