--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_core
-	base = 7217ec8
-	trimbase = 
+	base = 635e13d
+	trimbase = 7217ec8
 	parent = upstream
 	previous = 121e0ba
