--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_geometry
-	base = b648211
-	trimbase = 
+	base = aed9b5b
+	trimbase = b648211
 	parent = upstream
 	previous = 121e0ba
