--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_core_apps
-	base = e1560a1
-	trimbase = 
+	base = 7ec2e0b
+	trimbase = e1560a1
 	parent = upstream
 	previous = 121e0ba
