--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_utilities
-	base = bf1f633
-	trimbase = 
+	base = 5df1ccd
+	trimbase = bf1f633
 	parent = upstream
 	previous = 121e0ba
