--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_mpl
-	base = 3c081fe
-	trimbase = 
+	base = ee46d73
+	trimbase = 3c081fe
 	parent = upstream
 	previous = 121e0ba
