--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_concepts
-	base = 35ded69
-	trimbase = 
+	base = 418a6fb
+	trimbase = 35ded69
 	parent = upstream
 	previous = 121e0ba
