--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_math
-	base = 2f48300
-	trimbase = 
+	base = 8398671
+	trimbase = 2f48300
 	parent = upstream
 	previous = 121e0ba
