--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_converters
-	base = 1e7234e
-	trimbase = 
+	base = fd91b2f
+	trimbase = 1e7234e
 	parent = upstream
 	previous = 121e0ba
