--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_linear_algebra
-	base = 87cb64e
-	trimbase = 
+	base = 1f23444
+	trimbase = 87cb64e
 	parent = upstream
 	previous = 121e0ba
