--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.61.1": ["Daniel Stonier", "d.stonier@gmail.com"], "0.61.7": ["Daniel Stonier", "d.stonier@gmail.com"], "0.61.15": ["Daniel Stonier", "d.stonier@gmail.com"]}
+{"0.61.1": ["Daniel Stonier", "d.stonier@gmail.com"], "0.61.7": ["Daniel Stonier", "d.stonier@gmail.com"], "0.61.15": ["Daniel Stonier", "d.stonier@gmail.com"], "0.61.17": ["Daniel Stonier", "d.stonier@gmail.com"]}
