--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_statistics
-	base = f5bfeb7
-	trimbase = 
+	base = e5035b5
+	trimbase = f5bfeb7
 	parent = upstream
 	previous = 121e0ba
