--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_formatters
-	base = 96cb02d
-	trimbase = 
+	base = fa73f43
+	trimbase = 96cb02d
 	parent = upstream
 	previous = 121e0ba
