--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_filesystem
-	base = cab7775
-	trimbase = 
+	base = 8a613d6
+	trimbase = cab7775
 	parent = upstream
 	previous = 121e0ba
