--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_sigslots
-	base = 09fb883
-	trimbase = 
+	base = c487323
+	trimbase = 09fb883
 	parent = upstream
 	previous = 121e0ba
