--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_exceptions
-	base = d2d0e0d
-	trimbase = 
+	base = 928ebd4
+	trimbase = d2d0e0d
 	parent = upstream
 	previous = 121e0ba
