--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_eigen
-	base = 9fb333e
-	trimbase = 
+	base = aee15a5
+	trimbase = 9fb333e
 	parent = upstream
 	previous = 121e0ba
