--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_type_traits
-	base = 76bb046
-	trimbase = 
+	base = 52f1380
+	trimbase = 76bb046
 	parent = upstream
 	previous = 121e0ba
