--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_command_line
-	base = 495d861
-	trimbase = 
+	base = 955b68c
+	trimbase = 495d861
 	parent = upstream
 	previous = 121e0ba
