--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_ipc
-	base = 22406d3
-	trimbase = 
+	base = 0382ca1
+	trimbase = 22406d3
 	parent = upstream
 	previous = 121e0ba
