--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_devices
-	base = 2727520
-	trimbase = 
+	base = 9ba0aba
+	trimbase = 2727520
 	parent = upstream
 	previous = 121e0ba
