--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_time
-	base = 0753737
-	trimbase = 
+	base = 628accf
+	trimbase = 0753737
 	parent = upstream
 	previous = 121e0ba
