--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_containers
-	base = 88635e7
-	trimbase = 
+	base = 5977e98
+	trimbase = 88635e7
 	parent = upstream
 	previous = 121e0ba
