--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_threads
-	base = 574f764
-	trimbase = 
+	base = 2fb7910
+	trimbase = 574f764
 	parent = upstream
 	previous = 121e0ba
