--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_streams
-	base = b97461d
-	trimbase = 
+	base = 1bbfc8c
+	trimbase = b97461d
 	parent = upstream
 	previous = 121e0ba
