--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_core
-	base = 379244f
-	trimbase = 
+	base = 244cb7b
+	trimbase = 379244f
 	parent = upstream
 	previous = 121e0ba
