--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_geometry
-	base = c68c978
-	trimbase = 
+	base = bda95cf
+	trimbase = c68c978
 	parent = upstream
 	previous = 121e0ba
