--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_core_apps
-	base = 5b550ba
-	trimbase = 
+	base = 38f2d1a
+	trimbase = 5b550ba
 	parent = upstream
 	previous = 121e0ba
