--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_utilities
-	base = 861368f
-	trimbase = 
+	base = 876060d
+	trimbase = 861368f
 	parent = upstream
 	previous = 121e0ba
