--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_mpl
-	base = 5e168e5
-	trimbase = 
+	base = 8681878
+	trimbase = 5e168e5
 	parent = upstream
 	previous = 121e0ba
