--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_concepts
-	base = 5353e15
-	trimbase = 
+	base = 9ab2c05
+	trimbase = 5353e15
 	parent = upstream
 	previous = 121e0ba
