--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_math
-	base = 86b1e8f
-	trimbase = 
+	base = 7e2c3d5
+	trimbase = 86b1e8f
 	parent = upstream
 	previous = 121e0ba
