--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_converters
-	base = bbe4fa7
-	trimbase = 
+	base = 86a84df
+	trimbase = bbe4fa7
 	parent = upstream
 	previous = 121e0ba
