--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_linear_algebra
-	base = 46e86fe
-	trimbase = 
+	base = f4d7b68
+	trimbase = 46e86fe
 	parent = upstream
 	previous = 121e0ba
