--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_statistics
-	base = 02143c2
-	trimbase = 
+	base = 2b02e01
+	trimbase = 02143c2
 	parent = upstream
 	previous = 0203a9b
