--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_formatters
-	base = 4361cf2
-	trimbase = 
+	base = 0d2e976
+	trimbase = 4361cf2
 	parent = upstream
 	previous = 0203a9b
