--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_filesystem
-	base = 3221dde
-	trimbase = 
+	base = ed4a1e4
+	trimbase = 3221dde
 	parent = upstream
 	previous = 0203a9b
