--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_sigslots
-	base = dd352ac
-	trimbase = 
+	base = 54f9c4b
+	trimbase = dd352ac
 	parent = upstream
 	previous = 0203a9b
