--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_exceptions
-	base = 0bf8552
-	trimbase = 
+	base = 1bdff92
+	trimbase = 0bf8552
 	parent = upstream
 	previous = 0203a9b
