--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_eigen
-	base = 95a7c0f
-	trimbase = 
+	base = 6d8b462
+	trimbase = 95a7c0f
 	parent = upstream
 	previous = 0203a9b
