--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_type_traits
-	base = 21ac26e
-	trimbase = 
+	base = 652b7f4
+	trimbase = 21ac26e
 	parent = upstream
 	previous = 0203a9b
