--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_command_line
-	base = 0123284
-	trimbase = 
+	base = 6bab403
+	trimbase = 0123284
 	parent = upstream
 	previous = 0203a9b
