--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_ipc
-	base = f6d94b9
-	trimbase = 
+	base = ebeafa7
+	trimbase = f6d94b9
 	parent = upstream
 	previous = 0203a9b
