--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_devices
-	base = cafa54c
-	trimbase = 
+	base = 6182502
+	trimbase = cafa54c
 	parent = upstream
 	previous = 0203a9b
