--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_time
-	base = 01baf18
-	trimbase = 
+	base = e2a2dd7
+	trimbase = 01baf18
 	parent = upstream
 	previous = 0203a9b
