--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_containers
-	base = 4f587c3
-	trimbase = 
+	base = c7afb0a
+	trimbase = 4f587c3
 	parent = upstream
 	previous = 0203a9b
