--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_threads
-	base = 7793017
-	trimbase = 
+	base = d1d9417
+	trimbase = 7793017
 	parent = upstream
 	previous = 0203a9b
