--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_streams
-	base = 2b32821
-	trimbase = 
+	base = e081e61
+	trimbase = 2b32821
 	parent = upstream
 	previous = 0203a9b
