--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_core
-	base = 1b376d5
-	trimbase = 
+	base = 397c90d
+	trimbase = 1b376d5
 	parent = upstream
 	previous = 0203a9b
