--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_geometry
-	base = 3fb93b5
-	trimbase = 
+	base = 2824685
+	trimbase = 3fb93b5
 	parent = upstream
 	previous = 0203a9b
