--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_core_apps
-	base = 0bafca5
-	trimbase = 
+	base = a2dfcef
+	trimbase = 0bafca5
 	parent = upstream
 	previous = 0203a9b
