--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_utilities
-	base = e632d30
-	trimbase = 
+	base = 478678b
+	trimbase = e632d30
 	parent = upstream
 	previous = 0203a9b
