--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_mpl
-	base = 71bbbac
-	trimbase = 
+	base = d1402e2
+	trimbase = 71bbbac
 	parent = upstream
 	previous = 0203a9b
