--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_concepts
-	base = 314d153
-	trimbase = 
+	base = 9870d5f
+	trimbase = 314d153
 	parent = upstream
 	previous = 0203a9b
