--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_math
-	base = 44f37bf
-	trimbase = 
+	base = e31650f
+	trimbase = 44f37bf
 	parent = upstream
 	previous = 0203a9b
