--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_converters
-	base = 6277f95
-	trimbase = 
+	base = 0ed30f4
+	trimbase = 6277f95
 	parent = upstream
 	previous = 0203a9b
