--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ecl_linear_algebra
-	base = a07e378
-	trimbase = 
+	base = a26639e
+	trimbase = a07e378
 	parent = upstream
 	previous = 0203a9b
