--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 1f38d02
-	trimbase = 
+	trim = ecl_statistics
+	base = 472f5e4
+	trimbase = 1f38d02
 	parent = upstream
 	previous = 92a7f70
