--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d7747a5
-	trimbase = 
+	trim = ecl_formatters
+	base = 359f16d
+	trimbase = d7747a5
 	parent = upstream
 	previous = 92a7f70
