--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 3f3ba57
-	trimbase = 
+	trim = ecl_filesystem
+	base = dc25355
+	trimbase = 3f3ba57
 	parent = upstream
 	previous = 92a7f70
