--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = df76a55
-	trimbase = 
+	trim = ecl_sigslots
+	base = 6fd5eb5
+	trimbase = df76a55
 	parent = upstream
 	previous = 92a7f70
