--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 04d12fa
-	trimbase = 
+	trim = ecl_exceptions
+	base = bd4dd96
+	trimbase = 04d12fa
 	parent = upstream
 	previous = 92a7f70
