--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c8b5e7e
-	trimbase = 
+	trim = ecl_eigen
+	base = 1425571
+	trimbase = c8b5e7e
 	parent = upstream
 	previous = 92a7f70
