--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = b2c09c1
-	trimbase = 
+	trim = ecl_type_traits
+	base = ead44e8
+	trimbase = b2c09c1
 	parent = upstream
 	previous = 92a7f70
