--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 518b495
-	trimbase = 
+	trim = ecl_command_line
+	base = a3e7a13
+	trimbase = 518b495
 	parent = upstream
 	previous = 92a7f70
