--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d804a0f
-	trimbase = 
+	trim = ecl_ipc
+	base = 18dda93
+	trimbase = d804a0f
 	parent = upstream
 	previous = 92a7f70
