--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 075bf79
-	trimbase = 
+	trim = ecl_devices
+	base = 324ee17
+	trimbase = 075bf79
 	parent = upstream
 	previous = 92a7f70
