--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8c7ce6e
-	trimbase = 
+	trim = ecl_time
+	base = c6fdd14
+	trimbase = 8c7ce6e
 	parent = upstream
 	previous = 92a7f70
