--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6045cab
-	trimbase = 
+	trim = ecl_containers
+	base = 137d5d2
+	trimbase = 6045cab
 	parent = upstream
 	previous = 92a7f70
