--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 9da5591
-	trimbase = 
+	trim = ecl_threads
+	base = bf1f133
+	trimbase = 9da5591
 	parent = upstream
 	previous = 92a7f70
