--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0724cfa
-	trimbase = 
+	trim = ecl_streams
+	base = 271aa00
+	trimbase = 0724cfa
 	parent = upstream
 	previous = 92a7f70
