--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c0ae80d
-	trimbase = 
+	trim = ecl_core
+	base = e47c6e4
+	trimbase = c0ae80d
 	parent = upstream
 	previous = 92a7f70
