--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8a668d3
-	trimbase = 
+	trim = ecl_geometry
+	base = c6afe34
+	trimbase = 8a668d3
 	parent = upstream
 	previous = 92a7f70
