--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 55dc926
-	trimbase = 
+	trim = ecl_core_apps
+	base = 6a7578a
+	trimbase = 55dc926
 	parent = upstream
 	previous = 92a7f70
