--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 32cd259
-	trimbase = 
+	trim = ecl_utilities
+	base = 0d102b8
+	trimbase = 32cd259
 	parent = upstream
 	previous = 92a7f70
