--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2abca6c
-	trimbase = 
+	trim = ecl_mpl
+	base = b0b5dac
+	trimbase = 2abca6c
 	parent = upstream
 	previous = 92a7f70
