--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = be3a42a
-	trimbase = 
+	trim = ecl_concepts
+	base = 2f99b2a
+	trimbase = be3a42a
 	parent = upstream
 	previous = 92a7f70
