--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a72a97e
-	trimbase = 
+	trim = ecl_math
+	base = dad358b
+	trimbase = a72a97e
 	parent = upstream
 	previous = 92a7f70
