--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c4ea0a2
-	trimbase = 
+	trim = ecl_converters
+	base = 172642d
+	trimbase = c4ea0a2
 	parent = upstream
 	previous = 92a7f70
