--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 991ebca
-	trimbase = 
+	trim = ecl_linear_algebra
+	base = 20718f0
+	trimbase = 991ebca
 	parent = upstream
 	previous = 92a7f70
