--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c6fdd14
+	base = a555a9d
 	trimbase = 
 	parent = release/melodic/ecl_time
-	previous = 
+	previous = c6fdd14
