--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ca2565f
+	base = cd8ee68
 	trimbase = 
 	parent = debian/melodic/ecl_time
-	previous = 
+	previous = ca2565f
