--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1425571
+	base = 440a16d
 	trimbase = 
 	parent = release/melodic/ecl_eigen
-	previous = 
+	previous = 1425571
