--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 21e862d
+	base = 289f800
 	trimbase = 
 	parent = debian/melodic/ecl_eigen
-	previous = 
+	previous = 21e862d
