--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 18dda93
+	base = e580d11
 	trimbase = 
 	parent = release/melodic/ecl_ipc
-	previous = 
+	previous = 18dda93
