--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 72d233e
+	base = b2a530b
 	trimbase = 
 	parent = debian/melodic/ecl_ipc
-	previous = 
+	previous = 72d233e
