--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 324ee17
+	base = 978bb25
 	trimbase = 
 	parent = release/melodic/ecl_devices
-	previous = 
+	previous = 324ee17
