--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = da5470a
+	base = a37c675
 	trimbase = 
 	parent = debian/melodic/ecl_devices
-	previous = 
+	previous = da5470a
