--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 20718f0
+	base = 2fd2760
 	trimbase = 
 	parent = release/melodic/ecl_linear_algebra
-	previous = 
+	previous = 20718f0
