--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c28eb06
+	base = fabc4d0
 	trimbase = 
 	parent = debian/melodic/ecl_linear_algebra
-	previous = 
+	previous = c28eb06
