--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e47c6e4
+	base = ee6b37e
 	trimbase = 
 	parent = release/melodic/ecl_core
-	previous = 
+	previous = e47c6e4
