--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3da5570
+	base = adf14b4
 	trimbase = 
 	parent = debian/melodic/ecl_core
-	previous = 
+	previous = 3da5570
