--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c6afe34
+	base = 85f8b77
 	trimbase = 
 	parent = release/melodic/ecl_geometry
-	previous = 
+	previous = c6afe34
