--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3d9d2d1
+	base = 1c6a13c
 	trimbase = 
 	parent = debian/melodic/ecl_geometry
-	previous = 
+	previous = 3d9d2d1
