--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 137d5d2
+	base = 708f786
 	trimbase = 
 	parent = release/melodic/ecl_containers
-	previous = 
+	previous = 137d5d2
