--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7f4f95a
+	base = fd1879a
 	trimbase = 
 	parent = debian/melodic/ecl_containers
-	previous = 
+	previous = 7f4f95a
