--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bf1f133
+	base = b4664eb
 	trimbase = 
 	parent = release/melodic/ecl_threads
-	previous = 
+	previous = bf1f133
