--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5f0504e
+	base = 96e53a0
 	trimbase = 
 	parent = debian/melodic/ecl_threads
-	previous = 
+	previous = 5f0504e
