--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 271aa00
+	base = 9efb06e
 	trimbase = 
 	parent = release/melodic/ecl_streams
-	previous = 
+	previous = 271aa00
