--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4748e3c
+	base = 6c4e87f
 	trimbase = 
 	parent = debian/melodic/ecl_streams
-	previous = 
+	previous = 4748e3c
