--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 172642d
+	base = f6c5fbd
 	trimbase = 
 	parent = release/melodic/ecl_converters
-	previous = 
+	previous = 172642d
