--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 96a90d0
+	base = 2f482a1
 	trimbase = 
 	parent = debian/melodic/ecl_converters
-	previous = 
+	previous = 96a90d0
