--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0d102b8
+	base = ecaf9f7
 	trimbase = 
 	parent = release/melodic/ecl_utilities
-	previous = 
+	previous = 0d102b8
