--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d59062c
+	base = f4cdb99
 	trimbase = 
 	parent = debian/melodic/ecl_utilities
-	previous = 
+	previous = d59062c
