--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b0b5dac
+	base = 88475b4
 	trimbase = 
 	parent = release/melodic/ecl_mpl
-	previous = 
+	previous = b0b5dac
