--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 221e25a
+	base = 05f1bbf
 	trimbase = 
 	parent = debian/melodic/ecl_mpl
-	previous = 
+	previous = 221e25a
