--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ead44e8
+	base = d61500d
 	trimbase = 
 	parent = release/melodic/ecl_type_traits
-	previous = 
+	previous = ead44e8
