--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7ce77be
+	base = d78471d
 	trimbase = 
 	parent = debian/melodic/ecl_type_traits
-	previous = 
+	previous = 7ce77be
