--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2f99b2a
+	base = eb38fa8
 	trimbase = 
 	parent = release/melodic/ecl_concepts
-	previous = 
+	previous = 2f99b2a
