--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e4403b5
+	base = d9ace90
 	trimbase = 
 	parent = debian/melodic/ecl_concepts
-	previous = 
+	previous = e4403b5
