--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dad358b
+	base = 5518f65
 	trimbase = 
 	parent = release/melodic/ecl_math
-	previous = 
+	previous = dad358b
