--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 87b5f39
+	base = d69d3d4
 	trimbase = 
 	parent = debian/melodic/ecl_math
-	previous = 
+	previous = 87b5f39
